@@ -1,0 +1,72 @@
+<?xml version="1.0"?>
+<componentregistry>
+ <adapters/>
+ <utilities>
+  <utility 
+     interface="five.customerize.interfaces.IViewTemplateContainer"
+     object="portal_view_customizations"/>
+  <utility
+     interface="plone.app.redirector.interfaces.IRedirectionStorage"
+     factory="plone.app.redirector.storage.RedirectionStorage"/>
+  <utility
+     interface="plone.contentrules.engine.interfaces.IRuleStorage"
+     factory="plone.contentrules.engine.storage.RuleStorage"/>
+  <utility 
+     interface="plone.app.i18n.locales.interfaces.ICountries"
+     factory="plone.app.i18n.locales.countries.Countries"/>
+  <utility
+     interface="plone.app.i18n.locales.interfaces.IContentLanguages"
+     factory="plone.app.i18n.locales.languages.ContentLanguages"/>
+  <utility
+     interface="plone.app.i18n.locales.interfaces.IMetadataLanguages"
+     factory="plone.app.i18n.locales.languages.MetadataLanguages"/>
+  <utility
+     interface="plone.app.viewletmanager.interfaces.IViewletSettingsStorage"
+     factory="plone.app.viewletmanager.storage.ViewletSettingsStorage"/>
+  <utility
+     interface="Products.ATContentTypes.interface.IATCTTool"
+     object="portal_atct"/>
+  <utility
+     interface="Products.CMFActionIcons.interfaces.IActionIconsTool"
+     object="portal_actionicons"/>
+  <utility
+     interface="Products.CMFCore.interfaces.IDiscussionTool"
+     object="portal_discussion"/>
+  <utility
+     interface="Products.CMFCore.interfaces.IMetadataTool"
+     object="portal_metadata"/>
+  <utility
+     interface="Products.CMFCore.interfaces.IPropertiesTool"
+     object="portal_properties"/>
+  <utility
+     interface="Products.CMFCore.interfaces.ISiteRoot"
+     object=""/>
+  <utility
+     interface="Products.CMFCore.interfaces.ISyndicationTool"
+     object="portal_syndication"/>
+  <utility
+     interface="Products.CMFCore.interfaces.IUndoTool"
+     object="portal_undo"/>
+  <utility
+     interface="Products.CMFUid.interfaces.IUniqueIdAnnotationManagement"
+     object="portal_uidannotation"/>
+  <utility
+     interface="Products.CMFUid.interfaces.IUniqueIdGenerator"
+     object="portal_uidgenerator"/>
+  <utility
+     interface="Products.CMFPlone.interfaces.IPloneSiteRoot"
+     object=""/>
+  <utility
+     interface="Products.CMFPlone.interfaces.IInterfaceTool"
+     object="portal_interface"/>
+  <utility
+     interface="Products.CMFPlone.interfaces.IMigrationTool"
+     object="portal_migration"/>
+  <utility
+     interface="Products.MailHost.interfaces.IMailHost"
+     object="MailHost"/>
+  <utility
+     interface="zope.ramcache.interfaces.ram.IRAMCache"
+     factory="zope.ramcache.ram.RAMCache"/>
+ </utilities>
+</componentregistry>
